# carbmq-core

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  go.mod  go.sum
.github/ISSUE_TEMPLATE/: code_review.md  release.md  security.md
.github/workflows/: docker.yml  release.yml
api/db/: store.go
api/handlers/: http.go
api/services/: bridge.go  devices.go  hub.go
cmd/crabmq-cli/: main.go
cmd/crabmq-sim/: main.go
cmd/crabmqd/: main.go
configs/: crabmq.env.example
deployments/: api.Dockerfile  broker.Dockerfile  dashboard.Dockerfile  nginx.conf  sim.Dockerfile
docs/: architecture.md  qtt-spec.md
examples/: register-device.sh  send-command.json  simple_pub.rs  simple_sub.rs
internal/auth/acl/: service.go
internal/auth/jwt/: service.go
internal/broker/router/: router.go
internal/broker/server/: limiter.go  server.go
internal/broker/session/: store.go
internal/broker/subscription/: registry.go
internal/config/: config.go
internal/metrics/: metrics.go
internal/protocol/decoder/: json.go
internal/protocol/encoder/: json.go
internal/protocol/packets/: builders.go
internal/protocol/types/: types.go
internal/queue/memory/: store.go
internal/queue/persistent/: store.go
internal/transport/connection/: connection.go
internal/transport/quic/: server.go
pkg/qtt/client/: client.go
pkg/qtt/types/: packet.go
pkg/qtt/utils/: helpers.go
rust/crabmq-cli/: Cargo.toml
rust/crabmq-cli/src/: main.rs
rust/crabmq-parser/: Cargo.toml
rust/crabmq-parser/src/: lib.rs
scripts/: docker_build.sh
