[package]
name = "crabmq-rs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
quinn.workspace = true
rustls.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
crabmq-parser = { path = "../crabmq-parser" }
time = { version = "0.3", features = ["formatting"] }
